--- a/src/Profile.css
+++ b/src/Profile.css
@@ -87,6 +87,12 @@
     margin: 0;
     color: var(--text-primary);
   }
+
+  .skills > li{
+    background-color: var(--color-primary-light);
+    padding: 8px;
+    border-radius: 20px;
+  }
   
   @media (max-width: 600px) {
     .profile-wrapper {
